--- a/.github/workflows/container-images.yml
+++ b/.github/workflows/container-images.yml
@@ -2,6 +2,7 @@ name: Build and push container images on Quay.io
 
 on:
   push:
+    branches: [ master ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
 
